--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <!-- >Tutorial said might need these - uncomment/research as necessary</ -->
     <!-- supports-gl-texture android:name="GL_OES_compressed_ETC1_RGB8_texture" / -->
     <!-- supports-gl-texture android:name="GL_OES_compressed_paletted_texture" / -->
